#------------------------------------------------------------------------------
# Setup include file
#------------------------------------------------------------------------------

include_directories(include)

#------------------------------------------------------------------------------
# Add src code
#------------------------------------------------------------------------------

add_subdirectory(src)

#------------------------------------------------------------------------------
# Add test code
#------------------------------------------------------------------------------

add_subdirectory(test)
